// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AptoListItem Renders 1`] = `
<div
  class="AptoListItem"
>
  <div
    class="AptoListItem-content"
  >
    hi
  </div>
</div>
`;

exports[`AptoListItem Renders active 1`] = `
<div
  class="AptoListItem AptoListItem--active"
>
  <div
    class="AptoListItem-content"
  >
    active
  </div>
</div>
`;

exports[`AptoListItem Renders circle icon options 1`] = `
<div
  class="AptoListItem AptoListItem--icon"
>
  <div
    class="AptoListItem-iconWrapper"
  >
    <span
      class="AptoIcon AptoIcon--size5 AptoIcon--inline AptoIcon--circle AptoIcon--statusWarning AptoIcon--circleColorBlue"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
      <span
        class="AptoIcon-status"
      >
        !
      </span>
    </span>
  </div>
  <div
    class="AptoListItem-content"
  >
    hi
  </div>
</div>
`;

exports[`AptoListItem Renders empty 1`] = `
<div
  class="AptoListItem AptoListItem--empty"
>
  <div
    class="AptoListItem-content"
  >
    nothing found
  </div>
</div>
`;

exports[`AptoListItem Renders icon 1`] = `
<div
  class="AptoListItem AptoListItem--icon"
>
  <div
    class="AptoListItem-iconWrapper"
  >
    <span
      class="AptoIcon AptoIcon--size3 AptoIcon--inline"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </div>
  <div
    class="AptoListItem-content"
  >
    hi
  </div>
</div>
`;

exports[`AptoListItem Renders icon options 1`] = `
<div
  class="AptoListItem AptoListItem--icon"
>
  <div
    class="AptoListItem-iconWrapper"
  >
    <span
      class="AptoIcon AptoIcon--size5 AptoIcon--inline AptoIcon--statusWarning AptoIcon--colorBlue"
    >
      <svg
        focusable="false"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
      <span
        class="AptoIcon-status"
      >
        !
      </span>
    </span>
  </div>
  <div
    class="AptoListItem-content"
  >
    hi
  </div>
</div>
`;

exports[`AptoListItem Renders link 1`] = `
<div
  class="AptoListItem AptoListItem--link"
>
  <div
    class="AptoListItem-content"
  >
    hi
  </div>
</div>
`;

exports[`AptoListItem renders extra class 1`] = `
<div
  class="AptoListItem fooo"
>
  <div
    class="AptoListItem-content"
  >
    extra classes
  </div>
</div>
`;
